--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,12 +4,9 @@ $primary-color: #333;
 .back {
   width: 390px;
   height: 844px;
-  // background-image: repeating-linear-gradient(38deg,
-  //     rgb(255, 202, 212) 0px,
-  //     rgb(244, 172, 183) 40px);
   background-image: url("../assets/wooden-texture.webp");
-  display: inline-block;
   overflow: hidden;
+  position: relative;
 }
 
 body {
