--- a/src/styles/dice.scss
+++ b/src/styles/dice.scss
@@ -7,6 +7,7 @@
   font-size: 2em;
   line-height: 80%;
   display: inline-block;
+  transition: color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .selected {
