make it less ugly Fixes #37

--- a/src/styles/dice.scss
+++ b/src/styles/dice.scss
@@ -11,11 +11,11 @@
 }
 
 .selected {
-  color: red;
+  color: white;
 }
 
 .initial {
-  color: rgb(255, 229, 209);
+  color: green;
 }
 
 @keyframes roll-dice {
