--- a/src/styles/controlButton.scss
+++ b/src/styles/controlButton.scss
@@ -1,8 +1,11 @@
 .control-button {
   position: absolute;
   bottom: 20px;
-  color: rgb(255, 229, 209);
+  color: white;
   border-radius: 10px;
-  box-shadow: 0 0 8px 8px #8e623f;
   padding: 5px;
+}
+
+.control-button.inactive {
+  color: green
 }
