--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,19 +4,21 @@ $primary-color: #333;
 .back {
   width: 390px;
   height: 844px;
-  background-image: url("../assets/wooden-texture.webp");
+  background-color: black;
   overflow: hidden;
   position: relative;
 }
 
+@font-face {
+  font-family: "clacon2";
+  src: local("clacon2"),
+    url("../assets/fonts/clacon2.woff2") format("woff2");
+}
+
 body {
-  font: 100% $font-stack;
-  color: $primary-color;
   font-size: 2rem;
   -webkit-user-select: none;
-  /* Safari */
   -ms-user-select: none;
-  /* IE 10 and IE 11 */
   user-select: none;
-  /* Standard syntax */
+  font-family: "clacon2"
 }
