--- a/src/styles/controlButton.scss
+++ b/src/styles/controlButton.scss
@@ -4,8 +4,8 @@
   color: white;
   border-radius: 10px;
   padding: 5px;
-}
 
-.control-button.inactive {
-  color: green
+  &.inactive {
+    color: green;
+  }
 }
