--- a/src/styles/dice.scss
+++ b/src/styles/dice.scss
@@ -1,3 +1,24 @@
+$dice-transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+
+@mixin roll-dice {
+  @keyframes roll-dice {
+    0% {
+      transform: scale(1) rotateZ(0);
+    }
+    25% {
+      transform: scale(1.6) rotateZ(180deg);
+    }
+    50% {
+      transform: scale(1.2) rotateZ(90deg);
+    }
+    100% {
+      transform: scale(1) rotateZ(360deg);
+    }
+  }
+
+  animation: roll-dice #{$dice-transition};
+}
+
 .dice-container {
   position: absolute;
   bottom: 100px;
@@ -7,36 +28,17 @@
   font-size: 2em;
   line-height: 80%;
   display: inline-block;
-  transition: color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-}
+  transition: color $dice-transition;
 
-.selected {
-  color: white;
-}
+  &.selected {
+    color: white;
+  }
 
-.initial {
-  color: green;
-}
+  &.initial {
+    color: green;
+  }
 
-@keyframes roll-dice {
-  0% {
-    -webkit-transform: scale(1) rotateZ(0);
-            transform: scale(1) rotateZ(0);
+  &.animate:not(.selected) {
+    @include roll-dice;
   }
-  25% {
-    -webkit-transform: scale(1.6) rotateZ(180deg);
-            transform: scale(1.6) rotateZ(180deg);
-  }
-  50% {
-    -webkit-transform: scale(1.2) rotateZ(90deg);
-            transform: scale(1.2) rotateZ(90deg);
-  }
-  100% {
-    -webkit-transform: scale(1) rotateZ(360deg);
-            transform: scale(1) rotateZ(360deg);
-  }
-}
-
-.die.animate:not(.selected) {
-  animation: roll-dice 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
