--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -8,7 +8,7 @@
 .grid-container {
   height: 300px;
   display: grid;
-  grid-template-rows: 1fr 3fr 2fr
+  grid-template-rows: 1fr 3fr 2fr;
 }
 
 .grid-item {
