--- a/src/styles/dice.scss
+++ b/src/styles/dice.scss
@@ -5,12 +5,15 @@ $dice-transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     0% {
       transform: scale(1) rotateZ(0);
     }
+
     25% {
       transform: scale(1.6) rotateZ(180deg);
     }
+
     50% {
       transform: scale(1.2) rotateZ(90deg);
     }
+
     100% {
       transform: scale(1) rotateZ(360deg);
     }
@@ -19,16 +22,10 @@ $dice-transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   animation: roll-dice #{$dice-transition};
 }
 
-.dice-container {
-  position: absolute;
-  bottom: 100px;
-}
-
 .die {
-  font-size: 2em;
-  line-height: 80%;
   display: inline-block;
   transition: color $dice-transition;
+  font-size: 55px;
 
   &.selected {
     color: white;
@@ -41,4 +38,11 @@ $dice-transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   &.animate:not(.selected) {
     @include roll-dice;
   }
+}
+
+#dice-container {
+  height: 5vh;
+  width: 100%;
+  font-size: 3em;
+  margin-bottom: 20px;
 }
