--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,17 +1,108 @@
+$font-stack: Helvetica, sans-serif;
+$primary-color: #333;
+
+@font-face {
+  font-family: "clacon2";
+  src: local("clacon2"),
+    url("../assets/fonts/clacon2.woff2") format("woff2");
+}
+
+body {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  font-family: "clacon2";
+  background-color: black;
+}
+
+#app {
+  width: 95vw;
+  height: 100vh;
+  max-width: 444px;
+  max-height: 888px;
+  margin: auto;
+  position: relative;
+}
+
 .center-wrapper {
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
 
-.grid-container {
-  height: 300px;
-  display: grid;
-  grid-template-rows: 1fr 3fr 2fr;
+@media only screen and (max-width: 667px) and (min-height: 375px) {
+  #app {
+    font-size: 16px;
+  }
+
+  #score-table {
+    tr,
+    td {
+      border: 1px dashed green !important;
+    }
+  }
+
+  #status-bar {
+    font-size: 22px;
+  }
+
+  #status-bar span {
+    padding: 4px
+  }
+
+  .die {
+    font-size: 44px;
+  }
+
+  #control-button {
+    font-size: 20px;
+  }
 }
 
-.grid-item {
-  padding: 10px;
-  text-align: center;
+@media only screen and (max-width: 414px) and (min-height: 896px) {
+  #app {
+    font-size: 14px;
+  }
+
+  #status-bar {
+    font-size: 32px;
+  }
+
+  #status-bar span {
+    padding: 4px
+  }
+
+  .die {
+    font-size: 55px;
+  }
+
+  #dice-container {
+    margin-bottom: 10px;
+  }
+
+  #control-button {
+    font-size: 33px;
+  }
+}
+
+#overlay {
+  display: none;
+  position: absolute;
+  z-index: 100;
+  font-size: 3rem;
+  width: 100vw;
+  height: 100vh;
+}
+
+@media screen and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+  #overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: red;
+    background-color: black;
+  }
+
+  #app {
+    display: none;
+  }
 }
